project2/test/test_11710204_10.out
Error type 10 at Line 4: indexing on non-array variable
