project2/test/test_11710204_10.spl
int test_11710204_r5()
{
  int a = 10;
  int b = a[10];
  return b;
}
